--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="profile-header">
                 <!-- FOTO DE PERFIL - MODIFICAR AQUÍ -->
                 <div class="profile-image-container">
-                    <img src="/IMG_5180 2.jpg" 
+                    <img src="IMG_5180 2.jpg" 
                          alt="Foto de perfil" 
                          class="profile-image">
                 </div>
