--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 
                 <!-- DISCOS FAVORITOS - MODIFICAR AQUÍ -->
                 <div class="favorites-list">
-                    <div class="favorite-item">1. Nombre del Disco 1</div>
-                    <div class="favorite-item">2. Nombre del Disco 2</div>
-                    <div class="favorite-item">3. Nombre del Disco 3</div>
+                    <div class="favorite-item">1. GNX</div>
+                    <div class="favorite-item">2. Black & White Film</div>
+                    <div class="favorite-item">3. Blonde</div>
                 </div>
             </div>
             
