--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                 <!-- HABILIDADES - MODIFICAR AQUÍ -->
                 <div class="skills-container">
                     <div class="skill-item">
-                        <span class="skill-name">Programación</span>
+                        <span class="skill-name">Comunicación Digital</span>
                     </div>
                     <div class="skill-item">
-                        <span class="skill-name">Diseño Web</span>
+                        <span class="skill-name">Branding</span>
                     </div>
                     <div class="skill-item">
-                        <span class="skill-name">Análisis de Datos</span>
+                        <span class="skill-name">Dirección Creativa</span>
                     </div>
                     <div class="skill-item">
-                        <span class="skill-name">Comunicación</span>
+                        <span class="skill-name">Creatividad</span>
                     </div>
                 </div>
             </div>
@@ -77,9 +77,9 @@
                 
                 <!-- PELÍCULAS FAVORITAS - MODIFICAR AQUÍ -->
                 <div class="favorites-list">
-                    <div class="favorite-item">1. Nombre de la Película 1</div>
-                    <div class="favorite-item">2. Nombre de la Película 2</div>
-                    <div class="favorite-item">3. Nombre de la Película 3</div>
+                    <div class="favorite-item">1. About Time</div>
+                    <div class="favorite-item">2. Everything Everywhere All at Once</div>
+                    <div class="favorite-item">3. Whiplash</div>
                 </div>
             </div>
             
